--- a/about.html
+++ b/about.html
@@ -7,19 +7,24 @@
     <link rel="stylesheet" href="CSS/files.css">
     <title>About Page</title>
     <h1><img src="./images/Logo.png" alt="bakery logo" width="200" height="100"><br>
-
-        <ol>
-            <p>
-            <a href="home.html">Go to Home page</a>
-            <a href="about.html">Go to About page</a><br>
-            <a href="services.html">Go to Services page</a>
-            <a href="contactUs.html">Go to ContactUs page</a>
-            </p>
-        </ol>
+        
+        <nav>
+            <ol>
+                <p>
+                <a href="home.html"> Home page</a>
+                <a href="about.html"> About page</a><br>
+                <a href="services.html"> Services page</a>
+                <a href="contactUs.html"> ContactUs page</a>
+                </p>
+            </ol>
+            </nav>
 </h1>
 </head>
-<main style="background-color: rgb(204, 64, 18); size: 17pt;">
+<main >
 <body>
+     <!--
+    this is the body which contains every detail
+    -->
 
     <h1>About Us</h1>
     
@@ -34,4 +39,7 @@
     <p> Copyright &copy; 2025</p>
     <p>SweetCrumbs&trade;</p>
 </footer>
+<!--
+    this is the footer which contains details like copy right
+    -->
 </html>
