--- a/services.html
+++ b/services.html
@@ -8,18 +8,23 @@
     <title>Services Page</title>
     <h1><img src="./images/Logo.png" alt="bakery logo" width="200" height="100"><br>
 
-        <ol>
-            <p>
-            <a href="home.html">Go to Home page</a>
-            <a href="about.html">Go to About page</a><br>
-            <a href="services.html">Go to Services page</a>
-            <a href="contactUs.html">Go to ContactUs page</a>
-            </p>
-        </ol>
+        <nav>
+            <ol>
+                <p>
+                <a href="home.html"> Home page</a>
+                <a href="about.html"> About page</a><br>
+                <a href="services.html"> Services page</a>
+                <a href="contactUs.html"> ContactUs page</a>
+                </p>
+            </ol>
+            </nav>
     </h1>
 </head>
-<main style="background-color: rgb(204, 64, 18); size: 17pt;">
+<main >
 <body>
+     <!--
+    this is the body which contains every detail
+    -->
 
 
         <h1>List of Products </h1>
@@ -35,6 +40,9 @@
                 Vanilla Cake<br>
                 Raspberry Rose Cake
             </h4>
+            <!--
+    this is the heading 4 which contains the cakes the shop offers
+    -->
     
             <h4><img src="./images/treats.jpg" alt="Treats" width="400" height="300"></h4>
             
@@ -48,6 +56,9 @@
                     Red Valvet Cookies<br>
                     Sprinkle Cupcakes
                 </h4>
+                <!--
+    this is the heading 4 which contains the treats the shop offers
+    -->
                 </div>
             </blockquote>
             </p>
@@ -61,4 +72,7 @@
     <p> Copyright &copy; 2025</p>
     <p>SweetCrumbs&trade;</p>
 </footer>
+<!--
+    this is the footer which contains details like copy right
+    -->
 </html>
